k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-offers-cms-vendor-frontend
  labels:
    app: cms-vendor-frontend
spec:
  selector:
    app: cms-vendor-frontend
  ports:
    - port: 8081
      targetPort: 8081
